# stablemint

./: .gitignore  README.md  address.txt  hardhat.config.ts  package-lock.json  package.json  text.txt
backend/: .env.example  .gitignore  Cargo.toml  README.md  doc.md  docker-compose.yml  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
backend/authentication/: Cargo.toml
backend/authentication/src/: lib.rs
backend/config/: Cargo.toml
backend/config/src/: lib.rs
backend/crates/authentication/: Cargo.toml
backend/crates/authentication/src/: jwt.rs  lib.rs  password.rs  rate_limiter.rs  service.rs  validation.rs
backend/crates/config/: Cargo.toml
backend/crates/config/res/: DOC.md  app-config.json.example
backend/crates/config/src/: config_loader.rs  lib.rs
backend/crates/database/: Cargo.toml
backend/crates/database/src/: db_connect.rs  lib.rs  service.rs
backend/crates/error/: Cargo.toml
backend/crates/error/src/: lib.rs  macros.rs  middleware_handling.rs
backend/crates/middleware/: Cargo.toml
backend/crates/middleware/src/: api_middleware.rs  lib.rs
backend/crates/middleware/src/limits/: api_rate_limiter.rs  login_limiter.rs  mod.rs  rate_limit.rs  rate_limiter.rs
backend/crates/middleware/src/security/: jwt.rs  mod.rs  password.rs
backend/crates/middleware/src/validation/: user_account.rs
backend/crates/models/src/: lib.rs  user.rs  wallet.rs
backend/crates/utils/: Cargo.toml
backend/crates/utils/src/: crypto.rs  generate.rs  lib.rs  secrets.rs  vault.rs
backend/database/: Cargo.toml
backend/database/src/: auth.rs  conn.rs  credentials.rs  db_connect.rs  error_handler.rs  lib.rs  logging.rs  service.rs  services.rs  tests.rs  types.rs
backend/database/src/conn/: credentials.rs  mod.rs
backend/database/src/tests/: auth.rs  credentials.rs  mod.rs
backend/error/src/: lib.rs  middleware_handling.rs
backend/errors/: Cargo.toml
backend/errors/src/: lib.rs
backend/micro-service/user/: Cargo.toml  README.md
backend/micro-service/user/src/: debug.rs  lib.rs  main.rs  routes.rs  service.rs
backend/micro-service/user/src/handlers/: graphql.rs
backend/micro-service/user/src/handlers/auth/: mod.rs
backend/micro-service/user/src/routes/: mod.rs
backend/micro-service/user/src/schema/mutation/: user.rs
backend/micro-service/user/src/schema/query/: user.rs
backend/micro-service/user/src/tests/: mod.rs
backend/micro-service/users/: Cargo.toml
backend/micro-service/users/src/: main.rs  schema.rs
backend/micro-service/users/src/graphql/: mutation.rs  query.rs
backend/micro-service/wallet/: Cargo.toml  README.md
backend/micro-service/wallet/src/: lib.rs  main.rs  middleware.rs  routes.rs  service.rs
backend/micro-service/wallet/src/handlers/: graphql.rs
backend/micro-service/wallet/src/schema/mutation/: mod.rs  wallet.rs
backend/micro-service/wallet/src/schema/query/: mod.rs  wallet.rs
backend/micro-service/wallet/src/service/: keys.rs  mod.rs
backend/models/: Cargo.toml
backend/models/src/: auth.rs  lib.rs  token.rs  user.rs
backend/scripts/: run_tests.sh  set_vault.sh
backend/src/: app.ts  config.rs  error.rs  lib.rs  main.rs  server.ts  types.rs
backend/src/config/: index.ts  mod.rs
backend/src/controllers/: auth.controller.ts  loyalty.controller.ts
backend/src/database/: db_connect.rs  mod.rs  operation.rs
backend/src/error/: index.ts
backend/src/handlers/: graphql.rs
backend/src/handlers/auth/: mod.rs
backend/src/middleware/: auth.middleware.ts  debug.rs  error.rs  mod.rs
backend/src/middleware/auth/: jwt.rs  password.rs
backend/src/middleware/monitors/: sentry.rs
backend/src/models/: token.model.ts  user.model.ts  user.rs
backend/src/routes/: auth.route.ts  contractAdmin.route.ts  mod.rs  token.route.ts
backend/src/schema/: mod.rs
backend/src/schema/mutation/: mod.rs  user.rs
backend/src/schema/query/: hello.rs  mod.rs  user.rs
backend/src/utils/: encryption.ts  isAdmin.ts
backend/src/utils/contract/: admin.ts  index.ts  user.ts
backend/src/utils/contract/abi/: erc20token.ts  factory.ts  index.ts  tokenswap.ts
backend/tests/: Cargo.toml
backend/tests/src/: intergrate_test.rs  lib.rs  system_tests.rs
backend/user/: Cargo.toml
backend/user/src/: lib.rs  main.rs
backend/user/src/handlers/: graphql.rs
backend/user/src/handlers/auth/: mod.rs
backend/user/src/middleware/: mod.rs
backend/user/src/middleware/auth/: jwt.rs  password.rs
backend/user/src/models/: mod.rs
backend/user/src/routes/: mod.rs
backend/user/src/schema/mutation/: user.rs
backend/user/src/schema/query/: mod.rs  user.rs
backend/utils/: Cargo.toml
backend/utils/src/: lib.rs
contracts/: ERC20Factory.sol  StableCoin.sol  Swap.sol
contracts/interfaces/: ITransferLimiter.sol  IWhitelist.sol
contracts/periphery/: ERC20Factory.sol
contracts/utils/: CustomERC20.sol  LimitTransafer.sol  TransferLimiter.sol  WhiteList.sol  Whitelist.sol
contracts/utils/mocks/: MockERC20.sol
dashboard/: package-lock.json  package.json
dashboard/src/app/: layout.tsx  page.tsx  providers.tsx
dashboard/src/components/: app-sidebar.tsx  login-form.tsx  nav-projects.tsx  nav-user.tsx  register-form.tsx  site-header.tsx
dashboard/src/context/: auth.tsx
scripts/: 01.deploy.ts
smart-contract/: package-lock.json  package.json
smart-contract/contracts/: ERC20Token.sol  StableCoin.sol
smart-contract/contracts/interfaces/: IERC20Factory.sol  IStableCoin.sol
smart-contract/contracts/periphery/: ERC20Factory.sol  TokenSwap.sol
smart-contract/contracts/roles/: Role.sol
smart-contract/scripts/: 01.deploy.ts
smart-contract/test/: AvanceRole.test.ts  ERC20Factory.test.ts
smart-contract/test-contract/: admin.ts  test.ts  utils.ts
src/: admin.ts  index.ts  user.ts
src/abi/: erc20.ts  factory.ts  index.ts  role.ts  stable.ts  stableCoin.ts  swap.ts
src/interfaces/: index.ts
src/utils/contract/: admin.ts  (+1 more)
test/: ERC20Token.test.ts  StableCoin.test.ts  TokenSwap.test.ts  WhiteList.test.ts  stablecoin.test.ts  stablecointIntergrate.test.ts  transferLimit.test.ts
(+34 files in other folders)
