[workspace]
members = [
    "user",
    "config"
, "database", "error"]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
http = "1.3.1"
http-body = "1.0.1"
tracing = "0.1.41"
serde_json = "1.0.140"
dotenv = "0.15.0"
anyhow = "1.0.97"
thiserror = "2.0.12"
mockall = "0.13.1"
tokio = { version = "1.44.1", features = [
    "rt",
    "rt-multi-thread",
    "macros"
] }
serde = { version = "1.0.219", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
chrono = { version = "0.4.40", features = ["serde"] }

axum = "0.8.1"
async-trait = "0.1.88"
async-graphql-axum = "7.0.16"
async-graphql = { version = "7.0.16", features = ["chrono"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = [
    "trace",
    "cors",
    "compression-gzip",
    "catch-panic",
    "timeout",
    "limit",
    "request-id",
] }

surrealdb = { version = "2.2.1", features = ["kv-mem"] }
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
hex = "0.4.3"
lazy_static = "1.5.0"
sentry = { version = "0.37.0", features = ["tracing"] }
sentry-tracing = "0.37.0"

app-config = { path = "config" }
app-database = { path = "database" }
app-error = { path = "error" }