[workspace]
members = [
    "user",
    "config",
    "database",
    "models",
    "error"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]

# utilities dependencies
regex = "1.11.1"
dotenv = "0.15.0"
anyhow = "1.0.97"
thiserror = "2.0.12"
lazy_static = "1.5.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }

# tracing dependencies
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
sentry = { version = "0.37.0", features = ["tracing"] }
sentry-tracing = "0.37.0"
tracing = "0.1.41"

# security dependencies
uuid = { version = "1.16.0", features = ["v4", "serde"] }
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
hex = "0.4.3"

# async dependencies
async-trait = "0.1.88"
tokio = { version = "1.44.1", features = [
    "rt",
    "rt-multi-thread",
    "macros"
] }

# http dependencies
http = "1.3.1"
http-body = "1.0.1"
axum = "0.8.1"
async-graphql-axum = "7.0.16"
async-graphql = { version = "7.0.16", features = ["chrono"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = [
    "trace",
    "cors",
    "compression-gzip",
    "catch-panic",
    "timeout",
    "limit",
    "request-id",
] }

# database dependencies
surrealdb = { version = "2.2.1", features = ["kv-mem"] }
deadpool = "0.12.2"

# local dependencies
app-config = { path = "config" }
app-database = { path = "database" }
app-error = { path = "error" }
app-models = { path = "models" }