[workspace]
members = [
    "micro-service/user",
    "micro-service/wallet",
    "crates/config",
    "crates/database",
    "crates/models",
    "crates/error",
    "crates/middleware",
    "crates/utils",
    "tests", 
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]

# utilities dependencies
regex = "1.11.1"
dotenv = "0.15.0"
anyhow = "1.0.97"
thiserror = "2.0.12"
lazy_static = "1.5.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }

# tracing dependencies
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
sentry = { version = "0.37.0", features = ["tracing"] }
sentry-tracing = "0.37.0"
tracing = "0.1.41"

# security dependencies
uuid = { version = "1.16.0", features = ["v4", "serde"] }
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
hex = "0.4.3"

#crypto dependencies
bip39 = { version = "2.1.0", features = ["rand"] }
tiny-hderive = "0.3.0"
secp256k1 = "0.30.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
pbkdf2 = "0.12.2"
hmac = "0.12.1"
sha2 = "0.10.8"

# async dependencies
futures = "0.3.31"
async-trait = "0.1.88"
tokio = { version = "1.44.1", features = [
    "rt",
    "rt-multi-thread",
    "macros"
] }

# http dependencies
http = "1.3.1"
http-body = "1.0.1"
axum = "0.8.1"
async-graphql-axum = "7.0.16"
async-graphql = { version = "7.0.16", features = ["chrono"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = [
    "trace",
    "cors",
    "compression-gzip",
    "catch-panic",
    "timeout",
    "limit",
    "request-id",
] }

# database dependencies
surrealdb = { version = "2.2.1", features = ["kv-mem"] }
deadpool = "0.12.2"
redis = { version = "0.29.3", features = ["tokio-comp", "connection-manager", "cluster", "aio"] }

# local dependencies
app-config = { path = "crates/config" }
app-database = { path = "crates/database" }
app-error = { path = "crates/error" }
app-models = { path = "crates/models" }
app-middleware = { path = "crates/middleware" }
app-utils = { path = "crates/utils" }

micro-user = { path = "micro-service/user" }
micro-wallet = { path = "micro-service/" }
