[package]
name = "app-database"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace =  true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
deadpool = { workspace = true }
surrealdb = { workspace = true }

app-config = { workspace = true }
app-error = { workspace = true }