[package]
name = "app-test"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
surrealdb = { workspace = true }
async-trait = { workspace = true }
app-config = { workspace = true }
app-error = { workspace = true }
app-middleware = { workspace = true }
app-models = { workspace = true }
app-database = { workspace = true }
micro-user = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }