[package]
name = "app-test"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
app-error = { workspace = true }
app-middleware = { workspace = true }
app-models = { workspace = true }
app-database = { workspace = true }
micro-user = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }