[package]
name = "app-authentication"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }

app-database = { workspace = true }
app-error = { workspace = true }
app-models = { workspace = true }

[dev-dependencies]
tower = { workspace = true } 
