[package]
name = "app-config"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
app-error = { workspace = true }

[dev-dependencies]
tempfile = "3.19.1"
