[package]
name = "app-database"
version.workspace = true
edition.workspace = true

[dependencies]
futures = { workspace = true }
regex = { workspace = true }
tokio = { workspace =  true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
surrealdb = { workspace = true }

app-config = { workspace = true }
app-error = { workspace = true }

