[package]
name = "app-middleware"
version = "0.1.0"
edition = "2024"

[dependencies]
app-error = { workspace = true }
app-config = { workspace = true }

lazy_static = { workspace = true }
regex = { workspace = true }
argon2 = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }
redis = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
