[package]
name = "app-utils"
version.workspace = true
edition.workspace = true

[dependencies]
hex = { workspace = true }
bip39 = { workspace = true }
tiny-hderive = { workspace = true }
secp256k1 = { workspace = true }
tiny-keccak = { workspace = true }
pbkdf2 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }