[package]
name = "app-utils"
version.workspace = true
edition.workspace = true

[dependencies]
hex = { workspace = true }
bip39 = { workspace = true }
tiny-hderive = { workspace = true }
secp256k1 = { workspace = true }
tiny-keccak = { workspace = true }
pbkdf2 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }

app-error = { workspace = true }
app-models = { workspace = true }

[dev-dependencies]
wiremock = "0.6.3"